crates/search/tests/dumps/snapshots/mod.rs/generate_and_import_dump_containing_vectors/1.snap
---
source: crates/indexsearch/tests/dumps/mod.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batch_uid]",
  "indexUid": "pets",
  "status": "succeeded",
  "type": "settingsUpdate",
  "canceledBy": null,
  "details": {
    "embedders": {
      "doggo_embedder": {
        "source": "huggingFace",
        "model": "sentence-transformers/all-MiniLM-L6-v2",
        "revision": "e4ce9877abf3edfe10b0d82785e83bdcb973e22e",
        "documentTemplate": "{{doc.doggo}}"
      }
    }
  },
  "error": null,
  "duration": "[duration]",
  "enqueuedAt": "[date]",
  "startedAt": "[date]",
  "finishedAt": "[date]"
}
